Refactor theme and palette management; streamline store access methods for improved readability

--- a/app/timeskipper.kv
+++ b/app/timeskipper.kv
@@ -24,6 +24,10 @@
                 on_release: root.switch_theme()
             MDIconButton:
                 style: "standard"
+                icon: "palette"
+                on_release: root.switch_palette()
+            MDIconButton:
+                style: "standard"
                 icon: "cog"
                 on_release: root.open_time_picker()
     AnchorLayout:
